tests/miniJava/neg/006193_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { true while ( 0 ) { } } }
